--- a/week4.html
+++ b/week4.html
@@ -1,1 +1,20 @@
-!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Week 4 Lab Excercise</title>
+</head>
+<body style="font-family: Arial, Helvetica, sans-serif;">
+   <h1 style="color: black;text-align: center;font-size: large;">Honkai Impact 3rd</h1> 
+   <hr width="70%" color="red" size="3px">
+   <div>
+    <h2>A Gacha Game</h2>
+    <img src="https://tse2.mm.bing.net/th?id=OIP.UxaYd5w1-jkUqLqaDwm90wHaEK&pid=Api&P=0&h=180" alt="Honkai Impact 3rd"
+
+   </div>
+   <hr width="70%" color="red" size="3px">
+   <h3 style="font-style: oblique;">Link Dowload</h3>
+   <a ="https://honkaiimpact3.hoyoverse.com/asia/vi-vn/home">Honkai Impact 3rd</a>
+</body>
+</html>
