--- a/week4.html
+++ b/week4.html
@@ -6,7 +6,7 @@
     <title>Week 4 Lab Excercise</title>
 </head>
 <body style="font-family: Arial, Helvetica, sans-serif;">
-   <h1 style="color: black;text-align: center;font-size: large;">Honkai Impact 3rd</h1> 
+   <h1 style="color: black;text-align: center;font-size: 60px;">Honkai Impact 3rd</h1> 
    <hr width="70%" color="red" size="3px">
    <div>
     <h2>A Gacha Game</h2>
